cmake_minimum_required(VERSION 2.8)
project(examples)

add_executable(single_shot ./single_shot.cpp)
add_executable(digit_recog ./digit_recog.cpp)
add_executable(armor_detect ./video_armor_detector.cpp)
add_executable(protocol_test ./protocol_test.cpp)
add_executable(rune_pos ./rune_pos.cpp)
add_executable(rune_angle ./rune_angle.cpp)
add_executable(fake_transmit ./fake_transmit.cpp)

target_link_libraries(rune_angle perception)
target_link_libraries(rune_pos perception)
target_link_libraries(single_shot perception)
target_link_libraries(digit_recog perception)
target_link_libraries(armor_detect perception)
target_link_libraries(protocol_test communication)
target_link_libraries(fake_transmit communication)
